--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,25 @@
-@media  screen and (max-width:575px){
-  section{
-    overflow-x:hidden
-  }
-  img{
-    max-width: 100%;
-  }
-  .figcap{
-    display: none;
-  }
-  figure{
-    margin: 0 5px;
-  }
-  .content-home-img{
-    padding-left: 20px;
-  }
-  .button-imgs{
-    transform: translate(475px,-20px);
-    margin: 0;
-  }
-}
-
-
 @import url("./fonts.css");
 * {
   box-sizing: border-box;
-  max-width: 1440px;
+  /*max-width: 1440px;*/
   margin: 0 auto;
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
 }
 
 body {
   background-color: #fdfdfd;
   margin: 0;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
 }
-/*1 sld*/
+/*Discover stays to live, work or just relax*/
+
+.discover-bg{
+  background: url('../img/castelmezzano-1979546 1.png') center no-repeat;
+}
+
 .content{
-  background-image: url('../img/castelmezzano-1979546 1.png');
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .logo_vector{
@@ -63,16 +46,32 @@ body {
   padding: 0;
   display: flex;
   align-items: center;
+  overflow:hidden;
 }
 
-a{
+.menu a{
   text-decoration: none;
-  display: inline;
+  display: inline-block;
   border-bottom: 0.25em solid transparent;
+  top:0;
+  margin: 0 12px;
+  font-size: 1.5rem;
+  line-height: 1.75em;
+  color: #FFFFFF;
+  position: relative;
+  cursor: pointer;
 }
 
+.menu a:before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  top: 42px;
+  border-bottom: 0.25em solid transparent;
+  transition: border-bottom-color .9s ease;
+}
 
-a:hover{
+.menu a:hover::before{
   border-bottom: 0.25em solid #F5BD41;
 }
 
@@ -83,39 +82,34 @@ button{
   cursor: pointer;
 }
 
-.a_menu{
-  margin: 0 12px;
-  font-size: 1.5rem;
-  line-height: 1.75em;
-  color: #FFFFFF;
-}
-
 .img_menu{
   margin: 0 24px;
   width: 30px;
   height: 30px;
-  object-position: 35.897% 77.778%;
   object-fit: none;
+  object-position:  35.897% 77.778%;
 }
 
 .img_menu_acc{
   margin: 0;
   width: 40px;
   height: 40px;
-  object-position:  5.405% 87.5%;
   object-fit: none;
+  object-position: 5.405% 87.5%;
 }
+
 /* строки */
 .page{
   margin-top: 202px;
 }
+
 .search{
   padding: 100px 104px 126px;
   align-items: flex-end;
 }
 
 .discover{
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 3.1em;
@@ -138,25 +132,6 @@ input:focus{
   border: 4px solid #F5BD41;
 }
 
-.search-p{
-  font-size: 1.1em;
-  line-height: 1.3em;
-  margin-bottom: 20px;
-  color: #FFFFFF;
-  display: flex;
-  justify-content: flex-start;
-}
-.search-p-text{
-  margin: 0;
-  padding-right: 210px;
-}
-.search-block{
-  margin: 0;
-  display: flex;
-  background-color: #fdfdfd;
-  border-radius: 8px;
-}
-
 .hotel-search-input{
   max-width: 25.725em;
   width: 100%;
@@ -171,7 +146,7 @@ input:focus{
 }
 
 .start-search-input{
-  max-width: 17.625em;
+  max-width: 18.685em;
   width: 100%;
   margin: 0;
   height: 64px;
@@ -184,7 +159,7 @@ input:focus{
 }
 
 .start-search-name{
-  max-width: 16.095em;
+  max-width: 18.195em;
   width: 100%;
   margin: 0;
   height: 64px;
@@ -197,7 +172,7 @@ input:focus{
   border-radius: 8px;
 }
 /* кнопка */
-.btm-search{
+.btm-search-input{
   height: 64px;
   width: 192px;
   background-color:  #3077C6;
@@ -208,59 +183,84 @@ input:focus{
   display: unset;
   border: 4px solid transparent;
 }
+
 input{
   background-color: white;
 }
+
 .icon-svg{
   display: flex;
   justify-content: center;
   padding-bottom: 120px;
 }
+
 .icon-svg-brend{
   margin: 0;
   padding: 0 8px;
-  width: 140px;
 }
+/* What do we offer */
 
-/* sl c svg*/
 .advantages {
   height: 28.125em;
 }
 
+.advantages-width{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.search-p{
+  font-size: 1.1em;
+  line-height: 1.3em;
+  margin-bottom: 20px;
+  color: #FFFFFF;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.search-p-text{
+  margin: 0;
+  padding-right: 210px;
+}
+
+.search-block {
+  margin: 0;
+  display: flex;
+  background-color: #fdfdfd;
+  border-radius: 8px;
+}
+
 .highlight {
- width: 100px;
+  width: 100px;
   height: 4px;
   margin-bottom: 87px;
- background: #f5bd41;
+  background: #f5bd41;
   border: 0;
 }
 
 .heading {
-  font-weight: 500;
+  font-family:'Roboto', sans-serif;
   margin: 120px auto 20px;
   text-align: center;
   color: #383838;
   font-size: 2.5em;
-  text-decoration: none ;
-  border-bottom: 4px solid transparent;
 }
 
 .navlist-block{
   display: flex;
   flex-direction: column;
-  position: relative;
 }
 
 .navlist {
-  position: absolute;
   display: flex;
+  max-width: 1052px;
   width: 100%;
-  justify-content: space-evenly;
+  justify-content: space-between;
   padding: 0;
   list-style: none;
 }
+
 .navlist .support {
-  background: url('../img/css_sprites.png') no-repeat;
   width: 100px;
   height: 100px;
   margin: 0;
@@ -269,7 +269,6 @@ input{
 }
 
 .navlist .com{
-  background: url('../img/css_sprites.png') no-repeat;
   width: 100px;
   height: 100px;
   margin: 0;
@@ -278,7 +277,6 @@ input{
 }
 
 .navlist .book{
-  background: url('../img/css_sprites.png') no-repeat;
   width: 100px;
   height: 100px;
   margin: 0;
@@ -287,7 +285,6 @@ input{
 }
 
 .navlist .like{
-  background: url('../img/css_sprites.png') no-repeat;
   width: 100px;
   height: 100px;
   margin: 0;
@@ -305,70 +302,62 @@ input{
   object-position: 7.143% 92.857%;
   object-fit: none;
 }
-.navlist-text{
-  display: flex;
-  list-style: none;
-  max-width: 1435px;
-  width: 100%;
-  justify-content: space-evenly;
-  padding: 0;
-  object-position: 7.143% 92.857%;
-  object-fit: none;
-}
 
 li{
   margin: 0;
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 1.5em;
-  line-height: 3em;
+  line-height: 1.9em;
   text-align: center;
   color: #383838;
 }
 
 /* Homes guests loves */
+.homes-bg{
+  background-color: #EAF0F9;
+}
+
 .heading-homes{
-  background: #EAF0F9;
   height: 51.75em;
   align-items: center;
   display: flex;
-}
-
-.content-homes{
-  width: 77em;
+  justify-content: space-evenly;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .content-home-heading{
   font-weight: 500;
-  margin: 120px auto 20px;
+  margin: 120px auto 105px;
   text-align: center;
   color: #383838;
   font-size: 2.5em;
-  margin-bottom: 105px;
   border: 4px solid transparent;
   position: relative;
 }
 
-.content-home-heading:hover::before {
+.underline:before {
   content: "";
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  /* right: 47%;  */
   top: 72px;
   max-width: 100px;
   width: 100%;
   border-bottom: 6px solid #F5BD41;
 }
-img{
-  width: 100%;
+
+figure{
+  margin: 0 8px;
 }
+
 .content-home-img{
   display: flex;
-  margin-bottom: 80px;
   position: relative;
   width: 100%;
+  margin-bottom: 208px;
 }
 
 .content-home-img-fig{
@@ -380,31 +369,30 @@ img{
 }
 
 .content-home-img-p{
-  padding-top: 24px;
   font-weight: 400;
   font-size: 1.5em;
   line-height: 1.75em;
   color: #BFBFBF;
 }
+
 .button-img-s{
   color: rgb(10, 7, 1);
   height: 18px;
   width: 7px;
-  padding-top: 3.5px;
+  padding-top: 3px;
 }
+
 .button-img-s{
   color: rgb(10, 7, 1);
   height: 18px;
   width: 7px;
-  padding-top: 3.5px;
+  padding-top:3px;
 }
 
 .button-imgs{
   position: absolute;
-  top: 145px;
-  left: 35px;
-  right: -1185px;
-  bottom: 440px;
+  left: 97.6%;
+  transform: translateY(340%);
   background: #EAF0F9;
   font-size: 16px;
   padding: 4px 4px;
@@ -417,18 +405,209 @@ img{
   box-shadow: 2px 1px 5px;
 }
 
+/* The best destinations */
+
+.heading-homes-place{
+  align-items: center;
+  display: flex;
+  background: #FFFFFF;
+}
+
+.tabs{
+  display: flex;
+  background-color: #f2f2f3;
+  justify-content: flex-start;
+  max-width: 717px;
+  width: 100%;
+  border-radius: 8px;
+  margin: 64px 0;
+}
+.tabs-button{
+  margin: 0;
+  height: 64px;
+  background-color: #F3F3F4;
+  border-radius: 8px;
+  font-weight: 400;
+  font-size: 1.5em;
+  line-height: 1.75em;
+  color: #383838;
+  text-align: center;
+  max-width: 239px;
+  width: 100%;
+}
+
+.button-places:before {
+  content: "Places of interest"
+}
+
+.tabs-button:hover{
+  background-color: #3077C6;
+  color: #ffffff;
+}
+
+.tabs-button:focus{
+  background-color: #3077C6;
+  color: #ffffff;
+}
+
+.container-btn{
+  position: relative;
+}
+
+.container-img{
+  -webkit-filter: grayscale(75%);
+  filter: grayscale(75%);
+  /* opacity: 0.5;*/
+}
+
+.btn{
+  position: absolute;
+  bottom: 50%;
+  left: 30%;
+  background-color: #FFFFFF;
+  padding: 12px 24px;
+  cursor: pointer;
+  border-radius: 8px;
+  text-align: center;
+  border: 1px solid #3077C6;
+  font-weight: 400;
+  font-size: 1.1em;
+  line-height: 1.3em;
+  color: #3077C6;
+}
+/*sing up*/
+
+.mob-profile-bg{
+  background-color: #EAF0F9;
+}
+
+.profile-bg{
+  background-color: #EAF0F9;
+}
+
+.profile{
+  max-width: 1232px;
+  height: 200px;
+  display: flex;
+  width: 100%;
+}
+
+.profile-user{
+  margin: 0;
+  padding-left: 24px;
+}
+
+.profile-p-b{
+  margin: auto 0;
+  padding-left: 40px;
+}
+
+h3{
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  padding-bottom: 21px;
+  color: #383838;
+}
+
+.profile-sing-button{
+  background-color: #FFFFFF;
+  border: 1px solid #3077C6;
+  border-radius: 8px;
+  width: 128px;
+  height: 48px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+  color: #3077C6;
+}
+
+/*sing up mob*/
+.mob-profile{
+  max-width: 360px;
+  height: 106px;
+  display: flex;
+  width: 100%;
+  align-items: center;
+}
+.mob-profile-user-i{
+  height: 16px;
+  margin: 0 16px;
+}
+.tripHouseMob-img{
+  height: 58px;
+}
+
+.mob-profile-h-a{
+  display: flex;
+}
+
+.mob-profile-h{
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #383838;
+  padding: 0 16px;
+  text-align: left;
+}
+
+.mob-profile-a{
+  margin-right: 12px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  color: #3077C6;
+  padding-top: 5px;
+  cursor: pointer;
+}
+
+.content-button-imgs{
+  position: absolute;
+  right: 50%;
+  transform: translateY(1050%);
+  background-color: #EAF0F9;
+  font-size: 16px;
+  padding: 4px 4px;
+  width: 40px;
+  height: 40px;
+  border: none;
+  cursor: pointer;
+  border-radius: 50%;
+  text-align: center;
+  box-shadow: 2px 5px 5px ;
+}
+
+.button-img-s-s{
+  transform: rotate(90deg);
+margin: -5px;
+}
+
+.profile-clouse{
+  margin-right: 0;
+  margin-bottom: 160px;
+  padding: 24px;
+}
 /* footer*/
-.footer {
-  background: #10367c;
+footer{
+  background-color: #10367c;
+  width: 100%;
+}
+
+.fotter-width{
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .footer-about {
   display: flex;
   padding-top: 120px;
-  justify-content: space-around;
-  max-width: 1064px;
+  justify-content: space-between;
+  max-width: 1164px;
   width: 100%;
   margin: 0;
+  padding-left: 104px;
 }
 
 .footer-text {
@@ -437,23 +616,329 @@ img{
   font-size: 1.25em;
   line-height: 1em;
   color: #ffffff;
-  font-family:'Roboto';
+  font-family:'Roboto', sans-serif;
   text-align: left;
+}
+
+.bold-footer-text {
+  list-style: none;
+  margin-bottom: 24px;
+  font-size: 1.25rem;
+  line-height: 1em;
+  color: #ffffff;
+  text-align: left;
+  font-weight: 600;
 }
 
 .otdelni {
   padding: 0;
+  margin: 0;
 }
 
 .triphouse {
-  margin-left: 104px;
   padding-bottom: 120px;
   font-size: 1em;
   line-height: 4em;
   color: #ffffff;
-  font-family:'Roboto';
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 6%;
+  font-family:'Roboto', sans-serif;
 }
 
-.bold {
-  font-weight: 600;
+
+.triphouse-p{
+  margin: 0;
+}
+
+@media  screen and (max-width:575px){
+  section{
+    overflow-x:hidden;
+    overflow-y: hidden;
+  }
+  figure img{
+    width: 156px;
+  }
+  /*Discover stays to live, work or just relax*/
+  #advantages {
+    height: 710px;
+    margin-bottom: 40px;
+  }
+
+  .navlist {
+    flex-direction: column;
+  }
+  /*<!--Homes guests loves-->*/
+  #heading-homes{
+    padding: 0;
+    max-height: 354px;
+  }
+
+  .figcap{
+    display: none;
+  }
+
+  .content-home-img-fig{
+    padding-top: 8px;
+    font-size: 12px;
+    line-height: 14px;
+  }
+
+  .content-home-img-p{
+    margin: 0;
+    font-size: 12px;
+    line-height: 14px;
+  }
+
+  .content-home-heading{
+    font-weight: 500;
+    margin: 24px auto 37px;
+    text-align: center;
+    color: #383838;
+    border: 4px solid transparent;
+    position: relative;
+    font-size: 28px;
+    line-height: 33px;
+  }
+
+  figure{
+    margin: 0 5px;
+  }
+
+  .underline:before{
+    content: "";
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 72px;
+    max-width: 100px;
+    width: 100%;
+    border-bottom: 6px solid #ffffff;
+  }
+
+  .content-home-img{
+    padding-left: 20px !important;
+  }
+
+  .button-imgs{
+    transform: translateX(-28%) !important;
+    top: 62px;
+    width: 28px;
+    height: 28px;
+  }
+  /* footer */
+  .footer-text {
+    display: none;
+  }
+
+  .footer-about{
+    background: url('../img/logo_vector.png') no-repeat 50% 30%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: end;
+    flex-direction: unset;
+    padding: 0 32px;
+    font-size: 18px;
+    background-size: 150px 30px;
+    height: 200px;
+  }
+  .bold-footer-text {
+    border-bottom: 1px solid #fdfdfd;
+    font-size: 15px;
+  }
+
+  .otdelni{
+    margin: 0;
+  }
+
+  .triphouse {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 40px !important;
+  }
+
+  .triphouse-p{
+    line-height: 1.9em;
+    white-space: nowrap;
+    font-size: 0.8rem;
+    padding: 0 10px;
+  }
+
+  .tabs-button{
+    margin: 0;
+    height: 64px;
+    background-color: #ffffff;
+    border: 1px solid  #F3F3F4;
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 1.5em;
+    line-height: 1.75em;
+    color: #383838;
+    text-align: center;
+    width: 30%;
+  }
+  .tabs{
+    background-color: transparent;
+    justify-content: space-between;
+    max-width: 100%;
+  }
+#content-button-imgs{
+  width: 28px !important;
+  height: 28px !important;
+  top:34%;
+  left: 91.6% !important;
+  transform: translateY(-6%) !important;
+}
+
+.content-home-img{
+  margin-bottom: 40px !important;
+}
+/*sing up*/
+  .profile{
+display: none;
+  }
+
+}
+@media  screen and (max-width: 768px) {
+  section {
+    width: 100%;
+    overflow-x:hidden;
+    overflow-y:hidden
+  }
+  /*Homes guests loves-*/
+  .content-home-img{
+    padding: 0 10px;
+  }
+  #button-imgs{
+    left: 93.6%;
+    transform: translateY(308%);
+  }
+  .figcap-768{
+    display: none;
+  }
+
+    .button-places:before {
+      content: "Places"
+    }
+
+  .container-img{
+    -webkit-filter: grayscale(0%);
+    filter: grayscale(0%);
+  }
+
+  .btn{
+    display: none;
+  }
+
+  .content-button-imgs{
+    position: absolute;
+    background: #EAF0F9;
+    font-size: 16px;
+    padding: 4px 4px;
+    width: 40px;
+    height: 40px;
+    border: none;
+    cursor: pointer;
+    border-radius: 50%;
+    text-align: center;
+    box-shadow: 2px 5px 5px ;
+    left: 93.6% !important;
+    transform: translateY(311%) !important;
+  }
+
+.button-img-s-s{
+  transform: rotate(360deg);
+  height: 18px;
+  width: 7px;
+  padding-bottom: 3px;
+}
+
+  .tabs{
+    background-color: transparent;
+    justify-content: space-between;
+    max-width: 600px;
+    margin: 24px 0;
+    padding: 0 17px;
+  }
+
+  .figcap{
+    display: none;
+  }
+
+  .tabs:focus{
+    background-color: #3077C6;
+  }
+  }
+
+@media  screen and (max-width: 992px) {
+
+  section {
+    width: 100%;
+    overflow-x:hidden;
+    overflow-y:hidden
+  }
+  /*Homes guests loves-*/
+
+  .button-imgs{
+    left: 95.6%;
+    transform: translateY(308%);
+  }
+
+  /* footer */
+  .footer-about{
+    padding: 120px 6% 0;
+  }
+  .otdelni{
+    padding: 0 5px;
+  }
+
+  .triphouse{
+    margin: 0 10%;
+  }
+
+  .content-button-imgs{
+  left: 95.6%;
+  transform: translateY(308%);
+}
+  .button-img-s-s {
+    transform: rotate(360deg);
+    margin: -5px;
+  }
+  .figcap-768 {
+    display: none;
+  }
+
+  figure .img{
+    width: 60%;
+  }
+
+}
+
+@media screen and (max-width: 1220px) {
+  /*Homes guests loves-*/
+
+  .figcap-1220 {
+    display: none;
+  }
+  /* footer */
+  .footer-about{
+    padding: calc(20px + (50 - 20) * ((100vw - 320px) / (1200 - 320)));
+  }
+
+}
+
+@media screen and (max-width: 3645px) and (min-width:575px) {
+
+  /* footer */
+  .triphouse{
+    padding: 0 1% 120px;
+  }
+  /*Homes guests loves-*/
+  .heading-homes{
+    padding: calc(20px + (50 - 20) * ((100vw - 320px) / (1440 - 320)));
+  }
+  .mob-profile{
+    display: none;
+  }
+
 }
