--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,121 @@
 
+@import url("./fonts.css");
 * {
   box-sizing: border-box;
-
-
+  max-width: 1440px;
+  margin: 0 auto;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
 }
 
 body {
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
   background-color: #fdfdfd;
   margin: 0;
 }
+/*1 sld*/
+.content{
+  background-image: url('../img/castelmezzano-1979546 1.png');
+}
 
+.logo_vector{
+  max-width: 205px;
+  width: 100%;
+  height: 40px;
+  object-position:  50% 12.5%;
+  object-fit: none;
+  padding: 0;
+  margin-left: 104px;
+}
+
+.block-1{
+  padding-top: 51px;
+  display: flex;
+  height: 105px;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu{
+  margin-right: 104px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+
+a{
+  text-decoration: none;
+  display: inline;
+  border-bottom: 0.25em solid transparent;
+}
+
+
+a:hover{
+  border-bottom: 0.25em solid #F5BD41;
+}
+
+button{
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.a_menu{
+  margin: 0 12px;
+  font-size: 1.5rem;
+  line-height: 1.75em;
+  color: #FFFFFF;
+}
+
+.img_menu{
+  margin: 0 24px;
+  width: 30px;
+  height: 30px;
+  object-position: 35.897% 77.778%;
+  object-fit: none;
+}
+
+.img_menu_acc{
+  margin: 0;
+  width: 40px;
+  height: 40px;
+  object-position:  5.405% 87.5%;
+  object-fit: none;
+}
+/* строки */
+.page{
+  margin-top: 202px;
+}
+
+.search{
+  padding: 100px 104px 126px;
+  align-items: flex-end;
+}
+
+.discover{
+  font-style: normal;
+  font-weight: 500;
+  font-size: 3.1em;
+  line-height: 100%;
+  color: #FFFFFF;
+  margin-left: 104px;
+  display: inline-block;
+}
+
+label{
+  display:block;
+}
+
+input:hover{
+  border: 4px solid #F5BD41;
+  border-radius: 8px;
+}
+
+input:focus{
+  outline: none;
+  border: 4px solid #F5BD41;
+}
 
 .search-p{
   font-size: 1.1em;
@@ -21,16 +125,88 @@ body {
   display: flex;
   justify-content: flex-start;
 }
+
 .search-p-text{
   margin: 0;
   padding-right: 210px;
 }
+
 .search-block{
   margin: 0;
   display: flex;
   background-color: #fdfdfd;
   border-radius: 8px;
 }
+
+.hotel-search-input{
+  max-width: 25.725em;
+  width: 100%;
+  margin: 0;
+  height: 64px;
+  border-radius: 8px;
+  padding-left:10px;
+  border: 4px solid transparent;
+  font-size: 1.1em;
+  line-height: 1.3em;
+  color: #383838;
+}
+
+.start-search-input{
+  max-width: 17.625em;
+  width: 100%;
+  margin: 0;
+  height: 64px;
+  border-radius: 8px;
+  font-size: 1.1em;
+  line-height: 1.3em;
+  text-align: center;
+  color: #383838;
+  border: 4px solid transparent;
+}
+
+.start-search-name{
+  max-width: 16.095em;
+  width: 100%;
+  margin: 0;
+  height: 64px;
+  position: relative;
+  font-size: 1.1em;
+  line-height: 1.3em;
+  text-align: center;
+  color: #383838;
+  border: 4px solid transparent;
+  border-radius: 8px;
+}
+/* кнопка */
+.btm-search{
+  height: 64px;
+  width: 192px;
+  background-color:  #3077C6;
+  border-radius: 8px;
+  font-size: 1.5em;
+  line-height: 1.7em;
+  color: #FFFFFF;
+  display: unset;
+  border: 4px solid transparent;
+}
+
+input{
+  background-color: white;
+}
+
+.icon-svg{
+  display: flex;
+  justify-content: center;
+  padding-bottom: 120px;
+}
+
+.icon-svg-brend{
+  margin: 0;
+  padding: 0 8px;
+  width: 140px;
+}
+
+/* sl c svg*/
 .advantages {
   height: 28.125em;
 }
@@ -67,8 +243,8 @@ body {
   padding: 0;
   list-style: none;
 }
-
 .navlist .support {
+  background: url('../img/css_sprites.png') no-repeat;
   width: 100px;
   height: 100px;
   margin: 0;
@@ -77,6 +253,7 @@ body {
 }
 
 .navlist .com{
+  background: url('../img/css_sprites.png') no-repeat;
   width: 100px;
   height: 100px;
   margin: 0;
@@ -85,6 +262,7 @@ body {
 }
 
 .navlist .book{
+  background: url('../img/css_sprites.png') no-repeat;
   width: 100px;
   height: 100px;
   margin: 0;
@@ -93,6 +271,7 @@ body {
 }
 
 .navlist .like{
+  background: url('../img/css_sprites.png') no-repeat;
   width: 100px;
   height: 100px;
   margin: 0;
@@ -110,7 +289,6 @@ body {
   object-position: 7.143% 92.857%;
   object-fit: none;
 }
-
 .navlist-text{
   display: flex;
   list-style: none;
@@ -127,14 +305,26 @@ li{
   font-style: normal;
   font-weight: 400;
   font-size: 1.5em;
-  line-height: 1.8em;
+  line-height: 3em;
   text-align: center;
   color: #383838;
 }
 
+/* Homes guests loves */
+.heading-homes{
+  background: #EAF0F9;
+  height: 51.75em;
+  align-items: center;
+  display: flex;
+}
+
+.content-homes{
+  width: 77em;
+}
+
 .content-home-heading{
   font-weight: 500;
-  margin: 120px auto 105px;
+  margin: 120px auto 20px;
   text-align: center;
   color: #383838;
   font-size: 2.5em;
@@ -142,35 +332,76 @@ li{
   position: relative;
 }
 
-.content-home-heading:before {
+.content-home-heading:hover::before {
   content: "";
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
+  /* right: 47%;  */
   top: 72px;
   max-width: 100px;
   width: 100%;
   border-bottom: 6px solid #F5BD41;
 }
-
 img{
   width: 100%;
 }
-.advantages-width{
-  max-width: 1440px;
-  margin: 0 auto;
-}
-
-/* footer*/
-
-footer{
-  background-color: #10367c;
+.content-home-img{
+  display: flex;
+  margin-bottom: 80px;
+  position: relative;
   width: 100%;
 }
 
-.fotter-width{
-  max-width: 1440px;
-  margin: 0 auto;
+.content-home-img-fig{
+  padding-top: 24px;
+  font-weight: 400;
+  font-size: 1.5em;
+  line-height: 1.75em;
+  color: #3077C6;
+}
+
+.content-home-img-p{
+  padding-top: 24px;
+  font-weight: 400;
+  font-size: 1.5em;
+  line-height: 1.75em;
+  color: #BFBFBF;
+}
+.button-img-s{
+  color: rgb(10, 7, 1);
+  height: 18px;
+  width: 7px;
+  padding-top: 3px;
+}
+.button-img-s{
+  color: rgb(10, 7, 1);
+  height: 18px;
+  width: 7px;
+  padding-top: 3px;
+}
+
+.button-imgs{
+  position: absolute;
+  top: 145px;
+  left: 35px;
+  right: -1185px;
+  bottom: 440px;
+  background: #EAF0F9;
+  font-size: 16px;
+  padding: 4px 4px;
+  width: 40px;
+  height: 40px;
+  border: none;
+  cursor: pointer;
+  border-radius: 50%;
+  text-align: center;
+  box-shadow: 2px 1px 5px;
+}
+
+/* footer*/
+.footer {
+  background: #10367c;
 }
 
 .footer-about {
@@ -191,123 +422,40 @@ footer{
   text-align: left;
 }
 
-.bold-footer-text {
-  list-style: none;
-  margin-bottom: 24px;
-  font-size: 1.25rem;
-  line-height: 1em;
-  color: #ffffff;
-  text-align: left;
-  font-weight: 600;
-}
-
 .otdelni {
   padding: 0;
 }
 
 .triphouse {
+  margin-left: 104px;
   padding-bottom: 120px;
   font-size: 1em;
   line-height: 4em;
   color: #ffffff;
-  display: flex;
-  justify-content: flex-start;
-  margin-left: 6%;
 }
 
-.triphouse-p{
-  margin: 0;
+.bold {
+  font-weight: 600;
 }
 
 @media  screen and (max-width:575px){
   section{
-    overflow-x:hidden;
-    overflow-y: hidden;
+    overflow-x:hidden
   }
   img{
     max-width: 100%;
   }
-
-  /*Discover stays to live, work or just relax*/
-  #advantages {
-    height: 910px;
-    margin-bottom: 40px;
-  }
-
-  #content-home-heading{
-    margin: 40px auto;
-  }
-
-  .navlist {
-    flex-direction: column;
-  }
-
-  /* footer */
-  .footer-text {
+  .figcap{
     display: none;
   }
-
-  .footer-about{
-    background: url('../img/logo_vector.png') no-repeat 50% 30%;
-    display: flex;
-    justify-content: space-around;
-    align-items: end;
-    flex-direction: unset;
-    padding: 0 67px;
-    font-size: 18px;
-    background-size: 150px 30px;
-    height: 200px;
+  figure{
+    margin: 0 5px;
   }
-  .bold-footer-text {
-    border-bottom: 1px solid #fdfdfd;
+  .content-home-img{
+    padding-left: 20px;
   }
-
-  .otdelni{
+  .button-imgs{
+    transform: translate(475px,-20px);
     margin: 0;
   }
-
-  .triphouse {
-    padding: 20px 1% 50px !important;
-    display: flex;
-    justify-content: center;
-  }
-
-  .triphouse-p{
-    line-height: 1.9em;
-    white-space: nowrap;
-    font-size: 1.22rem;
-    padding: 0 10px;
-
-  }
-}
-
-@media  screen and (max-width: 960px) {
-
-  section {
-    width: 100%;
-    overflow-x:hidden;
-    overflow-y:hidden
-  }
-
-  /* footer */
-  .footer-about{
-    padding: 120px 6% 0;
-  }
-  .otdelni{
-    padding: 0 5px;
-  }
-
-  .triphouse{
-    margin: 0 10%;
-  }
-
-}
-
-@media screen and (max-width: 1440px) {
-
-  /* footer */
-  .triphouse{
-    padding: 0 1% 120px;
-  }
-
 }
