--- a/css/style.css
+++ b/css/style.css
@@ -2,19 +2,25 @@
 @import url("./fonts.css");
 * {
   box-sizing: border-box;
-  max-width: 1440px;
+  /*max-width: 1440px;*/
   margin: 0 auto;
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
 }
 
 body {
   background-color: #fdfdfd;
   margin: 0;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
 }
-/*1 sld*/
+/*Discover stays to live, work or just relax*/
+
+.discover-bg{
+  background: url('../img/castelmezzano-1979546 1.png') center no-repeat;
+}
+
 .content{
-  background-image: url('../img/castelmezzano-1979546 1.png');
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .logo_vector{
@@ -41,17 +47,36 @@ body {
   padding: 0;
   display: flex;
   align-items: center;
+  overflow:hidden;
 }
 
-a{
+.menu a{
   text-decoration: none;
-  display: inline;
+  display: inline-block;
   border-bottom: 0.25em solid transparent;
+  top:0;
+  margin: 0 12px;
+  font-size: 1.5rem;
+  line-height: 1.75em;
+  color: #FFFFFF;
+  position: relative;
+  cursor: pointer;
 }
 
+.menu a:after{
+  content: "";
+  background-color: #f66d52
+}
 
-a:hover{
-  border-bottom: 0.25em solid #F5BD41;
+.menu a:hover::before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  top: 42px;
+  right: 45px;
+  transform: translateX(50%);
+  border-bottom: 0.25em solid rgba(245, 189, 65, 1);
+  transition: all .3s ease;
 }
 
 button{
@@ -61,28 +86,22 @@ button{
   cursor: pointer;
 }
 
-.a_menu{
-  margin: 0 12px;
-  font-size: 1.5rem;
-  line-height: 1.75em;
-  color: #FFFFFF;
-}
-
 .img_menu{
   margin: 0 24px;
   width: 30px;
   height: 30px;
-  object-position: 35.897% 77.778%;
   object-fit: none;
+  object-position:  35% 77%;
 }
 
 .img_menu_acc{
   margin: 0;
   width: 40px;
   height: 40px;
-  object-position:  5.405% 87.5%;
   object-fit: none;
+  object-position: 5% 87%;
 }
+
 /* строки */
 .page{
   margin-top: 202px;
@@ -94,6 +113,7 @@ button{
 }
 
 .discover{
+  font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 3.1em;
@@ -111,31 +131,9 @@ input:hover{
   border: 4px solid #F5BD41;
   border-radius: 8px;
 }
-
 input:focus{
   outline: none;
   border: 4px solid #F5BD41;
-}
-
-.search-p{
-  font-size: 1.1em;
-  line-height: 1.3em;
-  margin-bottom: 20px;
-  color: #FFFFFF;
-  display: flex;
-  justify-content: flex-start;
-}
-
-.search-p-text{
-  margin: 0;
-  padding-right: 210px;
-}
-
-.search-block{
-  margin: 0;
-  display: flex;
-  background-color: #fdfdfd;
-  border-radius: 8px;
 }
 
 .hotel-search-input{
@@ -152,7 +150,7 @@ input:focus{
 }
 
 .start-search-input{
-  max-width: 17.625em;
+  max-width: 18.685em;
   width: 100%;
   margin: 0;
   height: 64px;
@@ -165,7 +163,7 @@ input:focus{
 }
 
 .start-search-name{
-  max-width: 16.095em;
+  max-width: 18.195em;
   width: 100%;
   margin: 0;
   height: 64px;
@@ -178,7 +176,7 @@ input:focus{
   border-radius: 8px;
 }
 /* кнопка */
-.btm-search{
+.btm-search-input{
   height: 64px;
   width: 192px;
   background-color:  #3077C6;
@@ -203,12 +201,37 @@ input{
 .icon-svg-brend{
   margin: 0;
   padding: 0 8px;
-  width: 140px;
 }
+/* What do we offer */
 
-/* sl c svg*/
 .advantages {
   height: 28.125em;
+}
+
+.advantages-width{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.search-p{
+  font-size: 1.1em;
+  line-height: 1.3em;
+  margin-bottom: 20px;
+  color: #FFFFFF;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.search-p-text{
+  margin: 0;
+  padding-right: 210px;
+}
+
+.search-block {
+  margin: 0;
+  display: flex;
+  background-color: #fdfdfd;
+  border-radius: 8px;
 }
 
 .highlight {
@@ -220,31 +243,28 @@ input{
 }
 
 .heading {
-  font-weight: 500;
+  font-family:'Roboto', sans-serif;
   margin: 120px auto 20px;
   text-align: center;
   color: #383838;
   font-size: 2.5em;
-  text-decoration: none ;
-  border-bottom: 4px solid transparent;
 }
 
 .navlist-block{
   display: flex;
   flex-direction: column;
-  position: relative;
 }
 
 .navlist {
-  position: absolute;
   display: flex;
+  max-width: 1052px;
   width: 100%;
-  justify-content: space-evenly;
+  justify-content: space-between;
   padding: 0;
   list-style: none;
 }
+
 .navlist .support {
-  background: url('../img/css_sprites.png') no-repeat;
   width: 100px;
   height: 100px;
   margin: 0;
@@ -253,7 +273,6 @@ input{
 }
 
 .navlist .com{
-  background: url('../img/css_sprites.png') no-repeat;
   width: 100px;
   height: 100px;
   margin: 0;
@@ -262,7 +281,6 @@ input{
 }
 
 .navlist .book{
-  background: url('../img/css_sprites.png') no-repeat;
   width: 100px;
   height: 100px;
   margin: 0;
@@ -271,7 +289,6 @@ input{
 }
 
 .navlist .like{
-  background: url('../img/css_sprites.png') no-repeat;
   width: 100px;
   height: 100px;
   margin: 0;
@@ -289,42 +306,35 @@ input{
   object-position: 7.143% 92.857%;
   object-fit: none;
 }
-.navlist-text{
-  display: flex;
-  list-style: none;
-  max-width: 1435px;
-  width: 100%;
-  justify-content: space-evenly;
-  padding: 0;
-  object-position: 7.143% 92.857%;
-  object-fit: none;
-}
 
 li{
   margin: 0;
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 1.5em;
-  line-height: 3em;
+  line-height: 1.9em;
   text-align: center;
   color: #383838;
 }
 
 /* Homes guests loves */
+.homes-bg{
+  background-color: #EAF0F9;
+}
+
 .heading-homes{
-  background: #EAF0F9;
   height: 51.75em;
   align-items: center;
   display: flex;
-}
-
-.content-homes{
-  width: 77em;
+  justify-content: space-evenly;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .content-home-heading{
   font-weight: 500;
-  margin: 120px auto 20px;
+  margin: 120px auto 105px;
   text-align: center;
   color: #383838;
   font-size: 2.5em;
@@ -332,23 +342,24 @@ li{
   position: relative;
 }
 
-.content-home-heading:hover::before {
+.underline:before {
   content: "";
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  /* right: 47%;  */
   top: 72px;
   max-width: 100px;
   width: 100%;
   border-bottom: 6px solid #F5BD41;
 }
-img{
-  width: 100%;
+
+figure{
+  margin: 0 8px;
 }
+
 .content-home-img{
   display: flex;
-  margin-bottom: 80px;
+  margin-bottom: 47px;
   position: relative;
   width: 100%;
 }
@@ -362,18 +373,12 @@ img{
 }
 
 .content-home-img-p{
-  padding-top: 24px;
   font-weight: 400;
   font-size: 1.5em;
   line-height: 1.75em;
   color: #BFBFBF;
 }
-.button-img-s{
-  color: rgb(10, 7, 1);
-  height: 18px;
-  width: 7px;
-  padding-top: 3px;
-}
+
 .button-img-s{
   color: rgb(10, 7, 1);
   height: 18px;
@@ -381,12 +386,17 @@ img{
   padding-top: 3px;
 }
 
+.button-img-s{
+  color: rgb(10, 7, 1);
+  height: 18px;
+  width: 7px;
+  padding-top:3px;
+}
+
 .button-imgs{
   position: absolute;
-  top: 145px;
-  left: 35px;
-  right: -1185px;
-  bottom: 440px;
+  left: 97.6%;
+  transform: translateY(340%);
   background: #EAF0F9;
   font-size: 16px;
   padding: 4px 4px;
@@ -400,6 +410,62 @@ img{
 }
 
 /* footer*/
+footer{
+  background-color: #10367c;
+  width: 100%;
+}
+
+.fotter-width{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.footer-about {
+  display: flex;
+  padding-top: 120px;
+  justify-content: space-between;
+  max-width: 1164px;
+  width: 100%;
+  margin: 0;
+  padding-left: 104px;
+}
+
+.footer-text {
+  list-style: none;
+  margin-bottom: 24px;
+  font-size: 1.25em;
+  line-height: 1em;
+  color: #ffffff;
+  font-family:'Roboto', sans-serif;
+  text-align: left;
+}
+
+.bold-footer-text {
+  list-style: none;
+  margin-bottom: 24px;
+  font-size: 1.25rem;
+  line-height: 1em;
+  color: #ffffff;
+  text-align: left;
+  font-weight: 600;
+}
+
+.otdelni {
+  padding: 0;
+}
+
+.triphouse {
+  padding-bottom: 120px;
+  font-size: 1em;
+  line-height: 4em;
+  color: #ffffff;
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 6%;
+  font-family:'Roboto', sans-serif;
+}
+
+/* footer */
 .footer {
   background: #10367c;
 }
@@ -419,6 +485,7 @@ img{
   font-size: 1.25em;
   line-height: 1em;
   color: #ffffff;
+  font-family:'Roboto', sans-serif;
   text-align: left;
 }
 
@@ -432,30 +499,203 @@ img{
   font-size: 1em;
   line-height: 4em;
   color: #ffffff;
+  font-family:'Roboto', sans-serif;
 }
 
 .bold {
   font-weight: 600;
 }
 
+.triphouse-p{
+  margin: 0;
+}
+
 @media  screen and (max-width:575px){
   section{
-    overflow-x:hidden
+    overflow-x:hidden;
+    overflow-y: hidden;
   }
   img{
-    max-width: 100%;
+    width: 156px;
+    height: 156px;
   }
+  /*Discover stays to live, work or just relax*/
+  #advantages {
+    height: 710px;
+    margin-bottom: 40px;
+  }
+
+  .navlist {
+    flex-direction: column;
+  }
+  /*<!--Homes guests loves-->*/
+  #heading-homes{
+    padding: 0;
+    max-height: 354px;
+  }
+
   .figcap{
     display: none;
   }
+
+  .content-home-img-fig{
+    padding-top: 8px;
+    font-size: 12px;
+    line-height: 14px;
+  }
+
+  .content-home-img-p{
+    margin: 0;
+    font-size: 12px;
+    line-height: 14px;
+  }
+
+  .content-home-heading{
+    font-weight: 500;
+    margin: 24px auto 34px;
+    text-align: center;
+    color: #383838;
+    font-size: 2.5em;
+    border: 4px solid transparent;
+    position: relative;
+  }
+
   figure{
     margin: 0 5px;
   }
-  .content-home-img{
-    padding-left: 20px;
+
+ .underline:before{
+   content: "";
+   position: absolute;
+   left: 50%;
+   transform: translateX(-50%);
+   top: 72px;
+   max-width: 100px;
+   width: 100%;
+   border-bottom: 6px solid #ffffff;
   }
+
+  .content-home-img{
+    padding-left: 20px !important;
+  }
+
   .button-imgs{
-    transform: translate(475px,-20px);
+    transform: translateX(-53%) !important;
+    top: 62px;
+    width: 28px;
+    height: 28px;
+  }
+  /* footer */
+  .footer-text {
+    display: none;
+  }
+
+  .footer-about{
+    background: url('../img/logo_vector.png') no-repeat 50% 30%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: end;
+    flex-direction: unset;
+    padding: 0 32px;
+    font-size: 18px;
+    background-size: 150px 30px;
+    height: 200px;
+  }
+  .bold-footer-text {
+    border-bottom: 1px solid #fdfdfd;
+    font-size: 15px;
+  }
+
+  .otdelni{
     margin: 0;
   }
+
+  .triphouse {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 40px !important;
+  }
+
+  .triphouse-p{
+    line-height: 1.9em;
+    white-space: nowrap;
+    font-size: 0.8rem;
+    padding: 0 10px;
+
+  }
 }
+@media  screen and (max-width: 768px) {
+  section {
+    width: 100%;
+    overflow-x:hidden;
+    overflow-y:hidden
+  }
+  /*Homes guests loves-*/
+  .content-home-img{
+    padding: 0 10px;
+  }
+  #button-imgs{
+    left: 93.6%;
+    transform: translateY(308%);
+  }
+  .figcap-768{
+    display: none;
+  }
+
+}
+@media  screen and (max-width: 992px) {
+
+  section {
+    width: 100%;
+    overflow-x:hidden;
+    overflow-y:hidden
+  }
+  /*Homes guests loves-*/
+
+  .button-imgs{
+    left: 95.6%;
+    transform: translateY(308%);
+  }
+
+  /* footer */
+  .footer-about{
+    padding: 120px 6% 0;
+  }
+  .otdelni{
+    padding: 0 5px;
+  }
+
+  .triphouse{
+    margin: 0 10%;
+  }
+
+}
+
+@media screen and (max-width: 1220px) {
+  /*Homes guests loves-*/
+
+  .figcap-1220 {
+    display: none;
+  }
+  /* footer */
+  .footer-about{
+    padding: calc(20px + (50 - 20) * ((100vw - 320px) / (1200 - 320)));
+  }
+
+}
+
+@media screen and (max-width: 1440px) {
+
+  /* footer */
+  .triphouse{
+    padding: 0 1% 120px;
+  }
+  /*Homes guests loves-*/
+  .heading-homes{
+    padding: calc(20px + (50 - 20) * ((100vw - 320px) / (1440 - 320)));
+  }
+
+}
+
+
+
